// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin in a stock JBrowse 1`] = `
Object {
  "configId": Any<String>,
  "index": Object {
    "configId": Any<String>,
  },
  "type": "VcfTabixAdapter",
}
`;

exports[`plugin in a stock JBrowse 2`] = `
Object {
  "adapter": Object {
    "configId": Any<String>,
    "index": Object {
      "configId": Any<String>,
    },
    "type": "VcfTabixAdapter",
  },
  "configId": Any<String>,
  "renderers": Object {
    "PileupRenderer": Object {
      "configId": Any<String>,
      "type": "PileupRenderer",
    },
    "SvgFeatureRenderer": Object {
      "configId": Any<String>,
      "labels": Object {
        "configId": Any<String>,
      },
      "type": "SvgFeatureRenderer",
    },
    "configId": Any<String>,
  },
  "type": "VariantTrack",
}
`;
